--- a/package.json
+++ b/package.json
@@ -10,10 +10,26 @@
     "type": "git",
     "url": "git+https://github.com/TMDav007/Book-a-Meal.git"
   },
-  "author": "Tolu (Tmd)",
+  "author": "Tolu(Tmd)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/TMDav007/Book-a-Meal/issues"
   },
-  "homepage": "https://github.com/TMDav007/Book-a-Meal#readme"
+  "homepage": "https://github.com/TMDav007/Book-a-Meal#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "express": "^4.16.3",
+    "mocha": "^5.1.1",
+    "nodemon": "^1.17.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0"
+  }
 }
