--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A meal ordering system",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon --watch server --exec babel-node server/server.js",
+    "test": ""
   },
   "repository": {
     "type": "git",
