--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A meal ordering system",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon --watch server --exec babel-node server/server.js"
+    "start:dev": "nodemon --watch server --exec babel-node server/server.js",
+    "test": "mocha --require babel-core/register server/test/index.js --exit"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "express": "^4.16.3",
     "mocha": "^5.1.1",
     "nodemon": "^1.17.3"
