--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A meal ordering system",
   "main": "index.js",
   "scripts": {
+    "start": "node ./dist/server.js",
     "start:dev": "nodemon --watch server --exec babel-node server/server.js",
+    "build": "babel server -s -d dist",
     "test": "mocha --require babel-core/register server/test/index.js --exit"
   },
   "repository": {
