--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./dist/server.js",
     "start:dev": "nodemon --watch server --exec babel-node server/server.js",
     "build": "babel server -s -d dist",
-    "test": "mocha --require babel-core/register server/test/index.js --exit"
+    "test": "nyc --reporter=html --reporter=text-lcov && nyc mocha --require babel-core/register server/test/ --exit"
   },
   "repository": {
     "type": "git",
@@ -33,8 +33,11 @@
     "babel-preset-airbnb": "^2.4.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
+    "coveralls": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0"
+    "eslint-plugin-import": "^2.11.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^11.7.1"
   }
 }
