modify coverall token

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./dist/server.js",
     "start:dev": "nodemon --watch server --exec babel-node server/server.js",
     "build": "babel server -s -d dist",
-    "test": "nyc --reporter=html --reporter=text-lcov && nyc mocha --require babel-core/register server/test/ --exit"
+    "test": "nyc mocha --require babel-core/register server/test/ --exit && nyc --reporter=html --reporter=text-lcov"
   },
   "repository": {
     "type": "git",
