--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node ./dist/server.js",
     "start:dev": "nodemon --watch server --exec babel-node server/server.js",
     "build": "babel server -s -d dist",
-    "test": "nyc mocha --require babel-core/register server/test/index.js --exit && nyc report --reporter=html --reporter=text-lcov | coveralls",
+    "test": "nyc mocha --require babel-core/register server/test/ --exit && nyc report --reporter=html --reporter=text-lcov | coveralls",
     "coverage": "nyc report --reporter=html --reporter=text-lcov | coveralls"
   },
   "repository": {
