--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,17 @@ language : node_js
 
 node_js: 'stable'
 
+
+
+env:
+  global:
+    - CC_TEST_REPORTER_ID= b023d51ccf099ee6f0950e3165beea7834af0d68ae8774e55b182bad8e77eb9d
+
+script:
+  - npm test
+after_script:
+- npm run coverage
+- npm install -g codeclimate-test-reporter
+- codeclimate-test-reporter < coverage/lcov.info
+
 COVERALLS_REPO_TOKEN: WJkiU7W556R1lKHCPys50oS35Fx503KQr
