--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,11 @@ env:
 language : node_js
 node_js: 'stable'
 
-before_script:
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
 script:
   - npm run test
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - npm run coverage
+  - npm install -g codeclimate-test-reporter
+  - codeclimate-test-reporter < coverage/lov.info
 
 COVERALLS_REPO_TOKEN: WJkiU7W556R1lKHCPys50oS35Fx503KQr
