--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ script:
 after_script:
   - npm run coverage
   - npm i -g codeclimate-test-reporter
-  - codeclimate-test-reporter <./coverage/lcov.info
+  - codeclimate-test-reporter < $TRAVIS_TEST_RESULT
 
 COVERALLS_REPO_TOKEN: WJkiU7W556R1lKHCPys50oS35Fx503KQr
