--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,19 @@ env:
 language : node_js
 node_js: 'stable'
 
+before_script:
+  - yarn global add nyc
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 
 script:
-  - npm run test
+  - nyc --reporter=lcov yarn run unit
+
 after_script:
-  - npm run coverage
-  - npm i -g codeclimate-test-reporter
-  - codeclimate-test-reporter < $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+
+notifications:
+  email: false
 
 COVERALLS_REPO_TOKEN: WJkiU7W556R1lKHCPys50oS35Fx503KQr
