--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter upload-coverage
 
 notifications:
   email: false
