--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ script:
   - nyc --reporter=lcov npm run test
 
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
-  - ./cc-test-reporter upload-coverage
+  - cc-test-reporter sum-coverage --output - --parts $PARTS coverage/codeclimate.*.json | \
+  - cc-test-reporter upload-coverage --input -
+  
 
 notifications:
   email: false
