--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 env:
   global:
-    - CC_TEST_REPORTER_ID=787a2f89b15c637323c7340d65ec17e898ac44480706b4b4122ea040c2a88f1d
+    - CC_TEST_REPORTER_ID=b023d51ccf099ee6f0950e3165beea7834af0d68ae8774e55b182bad8e77eb9d
 
 language : node_js
 node_js: 'stable'
@@ -14,9 +14,8 @@ script:
   - nyc --reporter=lcov npm run test
 
 after_script:
-  - cc-test-reporter sum-coverage --output - --parts $PARTS coverage/codeclimate.*.json | \
-  - cc-test-reporter upload-coverage --input -
-  
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter upload-coverage
 
 notifications:
   email: false
