--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # dependencies
-node_modules
+/node_modules
 
 # nyc output
-.nyc_output
+/.nyc_output
 
 # coverage
-coverage
+/coverage
 
 # dist folder
-dist
+/dist
 
 #coverall
-.coveralls.yml
+/.coveralls.yml
