--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
-    "express": "^4.16.3",
-    "mocha": "^5.1.1",
     "coveralls": "^3.0.0",
-    "nodemon": "^1.17.3",
+    "express": "^4.16.3",
+    "lodash": "^4.17.10",
+    "mocha": "^5.1.1",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^11.7.1"
+    "nodemon": "^1.17.3",
+    "nyc": "^11.7.1",
+    "validator": "^10.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
