--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "coveralls": "^3.0.0",
+    "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "mocha": "^5.1.1",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.17.3",
     "nyc": "^11.7.1",
+    "pg": "^7.4.2",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.37.6",
+    "sequelize-cli": "^4.0.0",
     "validator": "^10.0.0"
   },
   "devDependencies": {
