--- a/UI/prepros-6.config
+++ b/UI/prepros-6.config
@@ -10,8 +10,8 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "scss",
-      "styles"
+      "styles",
+      "scss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
