--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A meal ordering system",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist/server.js",
+    "start": "babel-node server/server.js",
     "start:dev": "nodemon --watch server --exec babel-node server/server.js",
     "build": "babel server -s -d dist",
     "test": "nyc mocha --require babel-core/register server/test/userTest --exit  && nyc report --reporter=html --reporter=text-lcov | coveralls",
